# voxcpm2-server

./: Cargo.toml  flake.nix
.github/workflows/: ci.yaml
src/: audio.rs  gui.rs  main.rs  server.rs
src/audio/: io.rs  resample.rs
src/model/: audio_vae.rs  config.rs  generate.rs  minicpm4.rs  mod.rs  tokenizer.rs  voxcpm.rs
src/nn/: attention.rs  mlp.rs  mod.rs
src/utils/: mod.rs  rope.rs  tensor.rs
