[package]
name = "voxcpm2"
version = "0.3.0"
edition = "2024"
description = "VoxCPM2 TTS CLI tool"

[dependencies]
candle-core = { version = "0.10" }
candle-nn = { version = "0.10" }
candle-transformers = { version = "0.10" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokenizers = "0.22"
hound = "3.5"
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "ogg", "isomp4", "aac"] }
rayon = "1.11"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num = "0.4"
url = "2"
base64 = "0.22"
reqwest = { version = "0.13", features = ["blocking"] }
dirs = "6"

[features]
cuda = ["candle-nn/cuda", "candle-core/cuda", "candle-transformers/cuda"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[lints.clippy]
needless_range_loop = "allow"
single_range_in_vec_init = "allow"
manual_div_ceil = "allow"

[lints.rust]
unsafe_code = "warn"
