[package]
name = "voxcpm2-rs"
version = "0.4.0"
edition = "2024"
description = "VoxCPM2 TTS tool (Rust) with CLI and GUI"

[dependencies]
candle-core = { version = "0.10" }
candle-nn = { version = "0.10" }
candle-transformers = { version = "0.10" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokenizers = "0.22"
hound = "3.5"
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "ogg", "isomp4", "aac"] }
rayon = "1.11"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num = "0.4"
url = "2"
base64 = "0.22"
reqwest = { version = "0.13", features = ["blocking"] }
dirs = "6"
iced = { version = "0.14", features = ["tokio"], optional = true }
tokio = { version = "1", features = ["rt", "sync"], optional = true }
rodio = { version = "0.22", optional = true }
rfd = { version = "0.17", optional = true }

[features]
cuda = ["candle-nn/cuda", "candle-core/cuda", "candle-transformers/cuda"]
gui = ["dep:iced", "dep:tokio", "dep:rodio", "dep:rfd"]
default = ["gui"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[lints.clippy]
needless_range_loop = "allow"
single_range_in_vec_init = "allow"
manual_div_ceil = "allow"

[lints.rust]
unsafe_code = "warn"
